hlx_statics/blocks/columns/columns.css
main div.columns-container {
    width: 100%;
    background: var(--spectrum-global-color-gray-100);
}

main div.columns {
    width: var(--spectrum-global-dimension-static-grid-fixed-max-width);
    box-sizing: border-box;
    margin: auto;
}

@media screen and (max-width: 1280px) {
    main div.columns {
        width: 100%;
    }
    main div.columns > div {
      flex-direction: column !important;
    }
}

main div.columns > div {
    display: flex;
    align-items: center;
    padding: var(--spectrum-global-dimension-size-1000) 0;
}

main div.columns > div:nth-child(even) {
    flex-direction: row-reverse;
}

main div.columns-container.background-color-white {
    background-color: white;
}

main div.columns-container.section[data-class="photoshoppricing"] .columns > div > div{
    flex-basis:auto;
    flex-grow: 1;
    flex-shink: 1;
    text-align: left;
    padding: 0 var(--spectrum-global-dimension-size-800);
}

main div.columns-container.section[data-class="photoshoppricing"] .columns .button-container{
    margin-left:0px;
}

main div.columns-container.section[data-list-class="checkmark"] ul {
    list-style: none;
    font-size: var(--spectrum-global-dimension-font-size-200);
    padding-top: var(--spectrum-global-dimension-size-300);
    padding-left: 0px;
}

main div.columns-container.section[data-list-class="checkmark"] ul > li {
    margin-bottom: 12px;
}

main div.columns-container.section[data-list-class="checkmark"] ul > li:before{
    color: #096;
    content: "\2714\0020";
}

main div.columns-container
@media screen and (max-width: 1280px) {
    main div.columns > div {
        flex-direction: column;
    }
}

main div.columns div.first-column {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 50%;
    height: calc(var(--spectrum-global-dimension-size-4600) - var(--spectrum-global-dimension-size-225));
    box-sizing: border-box;
    padding: 0 var(--spectrum-global-dimension-size-100);
    margin-top: 0;
}

main div.columns div.first-column img {
    max-height: 350px;
}

@media screen and (max-width: 1280px) {
    main div.columns div.first-column {
        width: 100%;
    }
}

main div.second-column {
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: left;
    box-sizing: border-box;
    padding: 0 var(--spectrum-global-dimension-size-400);
}

main .column-header .anchor-link{
    padding-left: 10px;
    visibility: hidden;
}

main .column-header:hover .anchor-link{
    padding-left: 10px;
    visibility: visible;
}

@media screen and (max-width: 1280px) {
    main div.columns div.second-column {
        width: 100%;
        margin: var(--spectrum-global-dimension-size-400) 0;
    }
  }

main div.columns h3.column-header {
    margin-top: 0!important;
    margin-bottom: var(--spectrum-global-dimension-size-200)!important;
    scroll-margin-top:100px;
}

main div.columns h3.column-header + p {
    margin-top: 0!important;
}

main div.columns p + p {
    margin-top: var(--spectrum-global-dimension-size-300);
}

main div.columns div.product-link-container p {
    margin-top: var(--spectrum-global-dimension-size-300);
}

main div.columns div.listing.second-column[data-align="right"]{
    text-align: right;
    width: auto;
}

main div.columns div.listing ul {
    text-align: left;
}

@media screen and (min-width:768px) {
    main div.columns div.product-link-container p + p {
        margin-left: var(--spectrum-global-dimension-size-300);
    }
}

main div.second-column div.product-link-container {
    display: flex;
    flex-direction: row;
}

@media screen and (max-width:768px) {
    main div.second-column div.product-link-container {
        flex-wrap: wrap;
    }
    main div.columns div.product-link-container p {
        width: 150px;
    }
}

main div.second-column div.product-link-container p.icon-container {
    display: flex;
    align-items: center;
}

main div.second-column div.product-link-container img {
    height: var(--spectrum-global-dimension-size-400);
    width: var(--spectrum-global-dimension-size-400);
    object-fit: contain;
}

main div.second-column div.product-link-container svg {
    height: var(--spectrum-global-dimension-size-400);
    width: var(--spectrum-global-dimension-size-400);
    object-fit: contain;
}

main div.second-column div.product-link-container a {
    margin-left: var(--spectrum-global-dimension-size-100);
}

/* metadata: style: center */

main .columns-container.center div.columns {
    width: auto;
}

main .columns-container.center div.columns > div {
    align-items: start;
}

main .columns-container.center div.columns > div > div {
    display: flex;
    flex-direction: column;
    text-align: center;
    padding: 0 var(--spectrum-global-dimension-size-400);
}

main .columns-container.center div.columns .button-container {
    display: inline-flex;
    margin: var(--spectrum-global-dimension-size-200) var(--spectrum-global-dimension-size-100);
    margin-bottom: 0;
}

@media screen and (max-width: 1280px) {
    main .columns-container.center div.columns > div > div {
        text-align: center;
        padding: var(--spectrum-global-dimension-size-1000) var(--spectrum-global-dimension-size-400);
    }

    main .columns-container.center div.columns > div {
        align-items: center;
    }
}

